fixed contrast issues

--- a/css/global_style.css
+++ b/css/global_style.css
@@ -17,7 +17,7 @@ body::before {
 }
 /*background image*/
 body {
-    background-image: url('../images/31880.jpg');
+    background-color: #2b2b2b;
     background-size: cover;  
     background-position: center;  
     background-repeat: no-repeat;  
