--- a/css/prod-details.css
+++ b/css/prod-details.css
@@ -115,7 +115,7 @@ body {
 /* Add to Cart Button */
 .add-to-cart {
     background-color: #17950e;
-    color: white;
+    color: rgb(0, 0, 0);
     border: none;
     padding: 15px 30px;
     font-size: 20px;
